--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans|Sahitya">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.baseurl }}public/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
