--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans|Sahitya">
 
   <!-- Icons -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   <!-- RSS -->
