--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans|Sahitya">
 
   <!-- Icons -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="{{ site.baseurl }}favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
